crates/shipper-config/src/snapshots/shipper_config__tests__snapshot_tests__merge_cli_overrides_file_values.snap
---
source: crates/shipper-config/src/lib.rs
expression: merged
---
RuntimeOptions {
    allow_dirty: true,
    skip_ownership_check: false,
    strict_ownership: false,
    no_verify: false,
    max_attempts: 10,
    base_delay: 2s,
    max_delay: 60s,
    retry_strategy: Exponential,
    retry_jitter: 0.1,
    retry_per_error: PerErrorConfig {
        retryable: None,
        ambiguous: None,
        permanent: None,
    },
    verify_timeout: 120s,
    verify_poll_interval: 5s,
    state_dir: ".shipper",
    force_resume: false,
    policy: Fast,
    verify_mode: Workspace,
    readiness: ReadinessConfig {
        enabled: true,
        method: Api,
        initial_delay: 1s,
        max_delay: 60s,
        max_total_wait: 300s,
        poll_interval: 2s,
        jitter_factor: 0.5,
        index_path: None,
        prefer_index: false,
    },
    output_lines: 200,
    force: false,
    lock_timeout: 7200s,
    parallel: ParallelConfig {
        enabled: true,
        max_concurrent: 8,
        per_package_timeout: 600s,
    },
    webhook: WebhookConfig {
        url: "",
        webhook_type: Generic,
        secret: None,
        timeout_secs: 30,
    },
    encryption: EncryptionConfig {
        enabled: false,
        passphrase: None,
        env_var: None,
    },
    registries: [],
    registry_policies: {},
    resume_from: None,
    rehearsal_registry: None,
    rehearsal_skip: false,
    rehearsal_smoke_install: None,
}
