crates/shipper-config/src/snapshots/shipper_config__tests__snapshot_tests__validation_error_empty_registry_name.snap
---
source: crates/shipper-config/src/lib.rs
expression: err.to_string()
---
registry.name cannot be empty
