crates/shipper-config/src/snapshots/shipper_config__tests__snapshot_tests__validation_error_max_delay_lt_base.snap
---
source: crates/shipper-config/src/lib.rs
expression: err.to_string()
---
retry.max_delay must be greater than or equal to retry.base_delay
