crates/shipper-config/src/snapshots/shipper_config__tests__snapshot_tests__validation_error_zero_base_delay.snap
---
source: crates/shipper-config/src/lib.rs
expression: err.to_string()
---
retry.base_delay must be greater than 0
