crates/shipper-config/src/snapshots/shipper_config__tests__snapshot_tests__validation_error_zero_lock_timeout.snap
---
source: crates/shipper-config/src/lib.rs
expression: err.to_string()
---
lock.timeout must be greater than 0
