crates/shipper-config/src/snapshots/shipper_config__tests__snapshot_tests__validation_error_zero_output_lines.snap
---
source: crates/shipper-config/src/lib.rs
expression: err.to_string()
---
output.lines must be greater than 0
